# ra

./: .pylintrc  README.md  docker-compose.yml  main.py  postman_collection.json  pyproject.toml
.claude/: repomix-output-a2aproject-a2a-python.md  repomix-output-a2aproject-a2a-samples.md
config/: a2a_config.yaml
docker/: Dockerfile.a2a_agent  Dockerfile.a2a_general_agent  Dockerfile.a2a_ra_agent  Dockerfile.a2a_rag_agent  Dockerfile.a2a_supervisor
docker/a2a_agents/: Dockerfile  README.md
docker/mcp_servers/: Dockerfile.market_data  Dockerfile.portfolio  Dockerfile.rag  Dockerfile.tavily
docs/: A2A_GUIDE.md  CHANGELOG_A2A.md  PROJECT_STRUCTURE.md  QUICKSTART.md
src/a2a/: client.py  general_server.py  ra_server.py  rag_server.py  server.py  supervisor_server.py
src/a2a_agents/: client.py  general_server.py  message_utils.py  ra_server.py  rag_server.py  supervisor_server.py
src/agents/: general_agent.py  ra_agent.py  rag_agent.py  robo_advisor_agent.py  supervisor_agent.py
src/mcp_custom/servers/: market_data_server.py  portfolio_server.py  rag_server.py  tavily_server.py
src/mcp_custom/tools/: mcp_tools.py
src/streamlit_app/: app.py
src/task_management/: __init__.py  models.py  redis_manager.py  redis_task_store.py
vector_db/: faiss_manager.py
